# Gradient-blue

./: .gitignore  .project  README.md  build.xml  build_variants.py  build_winshine.py  install.md
.externalToolBuilders/: Sass Builder.launch
GTK-3.22/: build.properties  build.xml
GTK-3.22-dark/: build.gradle  build.properties  build.xml  gradle.properties
GTK-3.22-dark/src/: gtk-named.css
GTK-3.22-dark/src/Gradient-black/: README  index.theme
GTK-3.22-dark/src/Gradient-black-HiDPI24/: index.theme
GTK-3.22-dark/src/Gradient-black-HiDPI28/: index.theme
GTK-3.22/src/Gradient-blue-324/: README
GTK-3.22/src/Gradient-blue-324.2/: README  index.theme
GTK-3.22/src/Gradient-blue-HiDPI24/: index.theme
GTK-3.22/src/Gradient-blue-HiDPI28/: index.theme  (+1 more)
GTK4-SASS/: README.txt  gtk4build.sh  meson.build
GTK4-SASS/cinnamon/: Default-dark.scss  Default-light.scss  _colors.scss  _common.scss  _drawing.scss  meson.build
GTK4-SASS/gnome-shell/: meson.build
GTK4-SASS/gtk4/: Default-dark.scss  Default-darkHi.scss  Default-darkUHi.scss  Default-light.scss  Default-lightHi.scss  Default-lightUHi.scss  _colors.scss  _common.scss  _drawing.scss  _sizes.scss  localDark.css  meson.build
Gradient-black/: index.theme
Gradient-black/gtk-2.0/: gtkrc
Gradient-black/gtk-3.0/: gtk-contained.css
Gradient-black/metacity-1/: metacity-theme-3.xml
Gradient-black/xfwm4/: button-inactive.xpm  close-prelight.xpm  close-pressed.xpm  hide-active.xpm  hide-prelight.xpm  hide-pressed.xpm  maximize-active.xpm  maximize-prelight.xpm  menu-active.xpm  menu-inactive.xpm  menu-prelight.xpm  menu-pressed.xpm  themerc  top-left-active.xpm  top-right-active.xpm
Misc/: LinkGitDark.sh  LinkGitGray.sh
launches/: Build-All-Variants.launch  Build-Color.launch  Build-Variants-Dark.launch  Build-Variants-Light.launch  Build-Variants-Shine.launch
metacity/: build.xml
packaging/: build_all.py  build_engine.py  build_variants.py  generate_theme.py  theme_colors.py
packaging/__pycache__/: .gitignore
packaging/configs/: winshine-dark.json  winshine.json
xfwm4/: build.properties  build.xml
(+166 files in other folders)
